--- a/Reser/Properties/Resources.resx
+++ b/Reser/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="Sheme" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sheme.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Reser_help" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reser_help.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
