--- a/ResUst/Properties/Resources.resx
+++ b/ResUst/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="SaveResults" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SaveResults.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ResUst_help" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ResUst_help.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
